--- a/prd-dao/pom.xml
+++ b/prd-dao/pom.xml
@@ -28,6 +28,10 @@
             <artifactId>prd-domain</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
