--- a/prd-service/pom.xml
+++ b/prd-service/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>prd-dao</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
