--- a/prd-web/src/main/resources/application-dev.yaml
+++ b/prd-web/src/main/resources/application-dev.yaml
@@ -1,10 +1,22 @@
 # Druid连接池配置，官方配置参考：https://github.com/alibaba/druid/tree/master/druid-spring-boot-starter
+
+# 顾客库
+master:
+  datasource:
+    url: jdbc:mysql://localhost:3306/prd_customer?characterEncoding=UTF-8
+    username: root
+    password: root
+    driverClassName: com.mysql.jdbc.Driver
+  #门店库
+cluster:
+  datasource:
+    url: jdbc:mysql://localhost:3306/prd_store?characterEncoding=UTF-8
+    username: root
+    password: root
+    driverClassName: com.mysql.jdbc.Driver
 spring:
   datasource:
     druid:
-      url: jdbc:mysql://localhost:3306/prd_customer?useUnicode=true&characterEncoding=utf8
-      username: root
-      password: root
       initial-size: 5
       max-active: 20
       min-idle: 10
@@ -26,5 +38,3 @@ spring:
         login-password: admin
         allow:
         deny:
-mybatis:
-    mapper-locations: classpath*:mybatis/*Mapper.xml
