--- a/prd-web/src/main/resources/application-dev.yaml
+++ b/prd-web/src/main/resources/application-dev.yaml
@@ -1,13 +1,13 @@
 # Druid连接池配置，官方配置参考：https://github.com/alibaba/druid/tree/master/druid-spring-boot-starter
 
-# 顾客库
+# 门店库
 master:
   datasource:
     url: jdbc:mysql://localhost:3306/prd_store?characterEncoding=UTF-8
     username: root
     password: root
     driverClassName: com.mysql.jdbc.Driver
-  #门店库
+# 顾客库
 cluster:
   datasource:
     url: jdbc:mysql://localhost:3306/prd_customer?characterEncoding=UTF-8
@@ -38,7 +38,26 @@ spring:
         login-password: admin
         allow:
         deny:
+  dubbo:
+    application:
+      id: prd-web
+      name: prd-web
+    registry:
+      address: zookeeper://127.0.0.1:2181
+  server: true
+  protocol:
+    name: dubbo
+    port: 20880
 
 server:
   port: 8080
+
+#pagehelper分页插件配置
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
+
+
 
